Fixed dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,11 +31,33 @@
     @apply list-decimal list-inside mb-3;
   }
   a {
-    @apply underline text-sky-600;
+    @apply underline text-slate-400;
   }
   a:hover {
-    @apply text-sky-500;
+    @apply text-sky-400;
   }
+}
+
+/* Underline Hover Effect*/
+.link-underline {
+  border-bottom-width: 0;
+  background-image: linear-gradient(transparent, transparent),
+    linear-gradient(#fff, #fff);
+  background-size: 0 10px;
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 0.5s ease-in-out;
+}
+
+.link-underline-blue {
+  background-image: linear-gradient(transparent, transparent),
+    linear-gradient(#dcfce7, #dcfce7);
+}
+
+.link-effect:hover .link-underline,
+.link-underline:hover {
+  background-size: 100% 10px;
+  background-position: 0 100%;
 }
 
 img {
